[gd_scene load_steps=4 format=3 uid="uid://k0npsk6t1t40"]

[ext_resource type="Script" uid="uid://dlt26od22mgp0" path="res://DeckEditor/deck_card.gd" id="1_tmdkr"]
[ext_resource type="Texture2D" uid="uid://dlr3q06mubnc5" path="res://Resources/Images/fab_card_back.webp" id="2_gtsu3"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://Resources/Json/MinimalUI.tres" id="3_gtsu3"]

[node name="DeckCard" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tmdkr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 548.0
offset_bottom = 764.0
theme_override_constants/separation = -675

[node name="CardTextureButton" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2_gtsu3")
expand_mode = 5

[node name="CardTextureButton2" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2_gtsu3")

[node name="CardTextureButton3" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2_gtsu3")

[node name="CardMenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = -2.0
offset_right = -2.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CardMenuPanel"]
custom_minimum_size = Vector2(405, 562)
layout_mode = 0
offset_right = 549.0
offset_bottom = 761.0
theme_override_constants/separation = 2

[node name="RemoveButton" type="Button" parent="CardMenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 139)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_gtsu3")
theme_override_font_sizes/font_size = 77
text = "Remove"

[node name="MainButton" type="Button" parent="CardMenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 139)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_gtsu3")
theme_override_font_sizes/font_size = 77
text = "To Main"

[node name="InventoryButton" type="Button" parent="CardMenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 139)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_gtsu3")
theme_override_font_sizes/font_size = 77
text = "To Inventory"

[node name="MaybeButton" type="Button" parent="CardMenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 139)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_gtsu3")
theme_override_font_sizes/font_size = 77
text = "To Maybe"
